Continue rewriting templates

--- a/src/Application/S2bBundle/Resources/views/Bundle/list.json.twig
+++ b/src/Application/S2bBundle/Resources/views/Bundle/list.json.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:list.twig.json' with {'repos': repos} %}
+{% include 'S2bBundle:Repo:list.json.twig' with {'repos': repos} %}
