--- a/src/Application/S2bBundle/Resources/views/Repo/list.js.twig
+++ b/src/Application/S2bBundle/Resources/views/Repo/list.js.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:list.php.js' with {'repos': repos} %}
+{% include 'S2bBundle:Repo:list.js.php' with {'repos': repos, 'callback': callback} %}
