--- a/src/Application/S2bBundle/Resources/views/Repo/search.html.twig
+++ b/src/Application/S2bBundle/Resources/views/Repo/search.html.twig
@@ -9,7 +9,7 @@
 {% block description %} Search for Open Source Bundles and Projects{% endblock %}
 
 {% block sidemenu %}
-{% include 'S2bBundle:Repo:add' %}
+{% include 'S2bBundle:Repo:add.html.twig' %}
 {% endblock %}
 
 {% block content %}
