--- a/src/Application/S2bBundle/Resources/views/Bundle/list.js.twig
+++ b/src/Application/S2bBundle/Resources/views/Bundle/list.js.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:list.twig.js' with {'repos': repos, 'callback': callback} %}
+{% include 'S2bBundle:Repo:list.js.twig' with {'repos': repos, 'callback': callback} %}
