--- a/src/Application/S2bBundle/Resources/views/Project/list.json.twig
+++ b/src/Application/S2bBundle/Resources/views/Project/list.json.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:list.twig.json' with {'repos': repos} %}
+{% include 'S2bBundle:Repo:list.json.twig' with {'repos': repos} %}
