--- a/src/Application/S2bBundle/Resources/views/Project/show.js.twig
+++ b/src/Application/S2bBundle/Resources/views/Project/show.js.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:show.twig.js' with {'repo': repo, 'callback': callback} %}
+{% include 'S2bBundle:Repo:show.js.twig' with {'repo': repo, 'callback': callback} %}
