--- a/src/Application/S2bBundle/Resources/views/Project/show.json.twig
+++ b/src/Application/S2bBundle/Resources/views/Project/show.json.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:show.twig.json' with {'repo': repo} %}
+{% include 'S2bBundle:Repo:show.json.twig' with {'repo': repo} %}
