--- a/src/Application/S2bBundle/Resources/views/Repo/searchResults.json.twig
+++ b/src/Application/S2bBundle/Resources/views/Repo/searchResults.json.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:list.twig.json' with {'repos': repos, 'callback': callback} %}
+{% include 'S2bBundle:Repo:list.json.twig' with {'repos': repos, 'callback': callback} %}
