--- a/src/Application/S2bBundle/Resources/views/Repo/show.js.twig
+++ b/src/Application/S2bBundle/Resources/views/Repo/show.js.twig
@@ -1,1 +1,1 @@
-{% include 'S2bBundle:Repo:show.php.js' with {'repo': repo, 'callback': callback} %}
+{% include 'S2bBundle:Repo:show.js.php' with {'repo': repo, 'callback': callback} %}
