--- a/src/Application/S2bBundle/Resources/views/Main/index.html.twig
+++ b/src/Application/S2bBundle/Resources/views/Main/index.html.twig
@@ -13,9 +13,9 @@
 <div class="home_text">
   <p>
   As for now, we index
-  <a href="{{ path('bundle_list') }}"><strong><?php echo $nbBundles ?></strong>Bundles</a>,
-  <a href="{{ path('project_list') }}"><strong><?php echo $nbProjects ?></strong>Projects</a> &amp
-  <a href="{{ path('user_list') }}"><strong><?php echo $nbUsers ?></strong>Developers</a>.
+  <a href="{{ path('bundle_list') }}"><strong>{{ nbBundles }}</strong>Bundles</a>,
+  <a href="{{ path('project_list') }}"><strong>{{ nbProjects }}</strong>Projects</a> &amp
+  <a href="{{ path('user_list') }}"><strong>{{ nbUsers }}</strong>Developers</a>.
   </p>
   <p>
   Symfony2Bundles is a spontaneous community initiative! Its purpose is to help us to find the best Bundles.
