All controllers are now defined as services

--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
@@ -12,7 +12,7 @@
 <h3>Sort by</h3>
 <div class='sidemenu uppercase'>
     <ul>
-    {% for field, text in fields %}
+    {% for field, text in sortFields %}
         {% if field == sort %}
         <li class='current'>
         {% else %}
