--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -46,8 +46,8 @@
                         <ul>
                             <li><a href="{{ path('bundle_list', {'sort': 'score'}) }}">by score</a></li>
                             <li><a href="{{ path('bundle_list', {'sort': 'name'}) }}">by name</a></li>
-                            <li><a href="{{ path('bundle_list', {'sort': 'lastUpdated'}) }}">last updated</a></li>
-                            <li><a href="{{ path('bundle_list', {'sort': 'lastCreated'}) }}">last created</a></li>
+                            <li><a href="{{ path('bundle_list', {'sort': 'lastCommitAt'}) }}">by last commit at</a></li>
+                            <li><a href="{{ path('bundle_list', {'sort': 'createdAt'}) }}">by created at</a></li>
                         </ul>
                     </dd>
                 </dl>
@@ -57,8 +57,8 @@
                         <ul>
                             <li><a href="{{ path('project_list', {'sort': 'score'}) }}">by score</a></li>
                             <li><a href="{{ path('project_list', {'sort': 'name'}) }}">by name</a></li>
-                            <li><a href="{{ path('project_list', {'sort': 'lastUpdated'}) }}">last updated</a></li>
-                            <li><a href="{{ path('project_list', {'sort': 'lastCreated'}) }}">last created</a></li>
+                            <li><a href="{{ path('project_list', {'sort': 'lastCommitAt'}) }}">by last commit at</a></li>
+                            <li><a href="{{ path('project_list', {'sort': 'createdAt'}) }}">by created at</a></li>
                         </ul>
                     </dd>
                 </dl>
