--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/listNewest.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/listNewest.html.twig
@@ -1,15 +1,11 @@
-<div id="last-created-bundles">
-    <h2>Last created bundles</h2>
+<div id="newest-bundles">
+    <h2>Newest bundles</h2>
     <ul class="bundles_list">
         {% for i, bundle in bundles %}
         <li class="bundle">
             <a href="{{ path('repo_show', { 'username': bundle.username, 'name': bundle.name }) }}">
                 <span class="name">{{ bundle.name }}</span>
                 <span class="number">{{ bundles|length - i }}</span>
-                <span class="date">
-                    <span class="day">{{ bundle.createdAt|date('d') }}</span>
-                    <span class="month">{{ bundle.createdAt|date('m') }}</span>
-                </span>
                 <span class="description">{{ bundle.description }}</span>
             </a>
         </li>
