--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
@@ -12,6 +12,6 @@
         In Symfony2 everything is a bundle, the core of Symfony2 itself is made of bundles.
     </div>
     {% render 'symfony2bundles.controller.bundle:listBestScoreAction' %}
-    {% render 'symfony2bundles.controller.bundle:listLastCreatedAction' %}
+    {% render 'symfony2bundles.controller.bundle:listNewestAction' %}
     {% render 'symfony2bundles.controller.bundle:listFeaturedAction' %}
 {% endblock %}
