--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/listFeatured.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Bundle/listFeatured.html.twig
@@ -1,12 +1,11 @@
 <div id="hot-bundles">
-    <h2>Hot bundles</h2>
+    <h2>What's hot?</h2>
     <ul class="bundles_list">
         {% for bundle in bundles %}
         <li class="bundle">
             <a href="{{ path('repo_show', {'username': bundle.username, 'name': bundle.name}) }}">
                 <span class="name">{{ bundle.name }}</span>
                 <span class="hot"><img src="{{ asset('bundles/knplabssymfony2bundles/images/heart.png') }}" alt="" /></span>
-                <span class="rank">{{ bundle.score }}</span>
                 <span class="description">{{ bundle.description }}</span>
             </a>
         </li>
