--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/User/list.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/User/list.html.twig
@@ -25,7 +25,7 @@
             <li class="developer">
                 <div class="image">
                     <a href="{{ url('user_show', {'name': user.name}) }}" class="name">
-                        <img src="{{ gravatar(user.email, 140) }}" alt="{{ user.name }}, Symfony developer" />
+                        <img src="{{ gravatar(user.email, 100) }}" alt="{{ user.name }}, Symfony developer" with="100" height="100" />
                     </a>
                 </div>
                 <div class="generals">
@@ -41,8 +41,5 @@
             </li>
             {% endfor %}
         </ul>
-    </div>
-    <div id="side">
-        {% render 'symfony2bundles.controller.bundle:listFeaturedAction' with {'max': 2} %}
     </div>
 {% endblock %}
