--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Home{% endblock %}
 
-{% block h1 %}What are bundles ?{% endblock %}
+{% block h1 %}Discover Symfony2 Bundles{% endblock %}
 
 {% block body_attributes %}id="homepage"{% endblock %}
 
@@ -11,6 +11,7 @@
         A bundle is a set of PHP classes which can be easily plugged with Symfony2. 
         In Symfony2 everything is a bundle, the core of Symfony2 itself is made of bundles.
     </div>
+    <img src="{{ asset('bundles/knplabssymfony2bundles/images/mascot.png') }}" alt="Mascot" id="mascot" />
     {% render 'symfony2bundles.controller.bundle:listBestScoreAction' %}
     {% render 'symfony2bundles.controller.bundle:listNewestAction' %}
     {% render 'symfony2bundles.controller.bundle:listFeaturedAction' %}
