--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -28,14 +28,10 @@
             <a href="{{ path('homepage') }}" title="Back to the homepage" id="logo">
                 <img src="{{ asset('bundles/knplabssymfony2bundles/images/logo.png') }}" alt="Symfony2 Bundles" />
             </a>
-            <img src="{{ asset('bundles/knplabssymfony2bundles/images/mascot.png') }}" alt="Mascot" id="mascot" />
             <a href="http://www.knplabs.com" title="KnpLabs - Quality. Innovation. Excitement" id="knplabs">
                 <img src="{{ asset('bundles/knplabssymfony2bundles/images/knplabs.png') }}" alt="KnpLabs" />
             </a>
             {{ menu('main') }}
-            <div id="title">
-                <h1><span>{% block h1 %}{% endblock %}</span></h1>
-            </div>
             <form method="get" action="{{ path('search') }}" id="search-box">
                 <label for="search-query">Search:</label>
                 <input type="text" id="search-query" name="q" value="{% block search_query %}{% endblock %}" />
@@ -43,9 +39,16 @@
             </form>
         </div>
     </div><!-- /#header -->
-    <div id="content" class="clearfix">
-        {% block content %}{% endblock %}
-    </div><!-- /#content -->
+    <div id="content-wrapper">
+        <div id="content" class="clearfix">
+            <div id="content-title">
+                {% block content_title %}</h1>
+                <h1>{% block h1 %}{% endblock %}</h1>
+                {% endblock %}
+            </div>
+            {% block content %}{% endblock %}
+        </div><!-- /#content -->
+    </div>
     <div id="footer-wrapper">
         <div id="footer">
             <div id="footer-inner">
