--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
@@ -9,7 +9,9 @@
 {% block slogan %}Programmatic HTTP API to access Bundles and developers data{% endblock %}
 
 {% block content %}
-<div class="doc_text markdown">
-    {{ text|markdown|raw }}
+<div id="main">
+    <div class="doc_text markdown">
+        {{ text|markdown|raw }}
+    </div>
 </div>
 {% endblock %}
