--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
@@ -5,3 +5,5 @@
 {% block title %}All {{ repos|length }} Projects{% endblock %}
 
 {% block description %}All Open Source Symfony2 Projects sorted by {{ sort }}{% endblock %}
+
+{% block route_list %}{{ path('project_list', {'sort': field}) }}{% endblock %}
