Some more cosmetic changes

--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
@@ -9,9 +9,11 @@
 {% block slogan %}Programmatic HTTP API to access Bundles and developers data{% endblock %}
 
 {% block content %}
-<div id="main">
-    <div class="doc_text markdown">
-        {{ text|markdown|raw }}
+<div id="api">
+    <div id="main">
+        <div class="doc_text markdown">
+            {{ text|markdown|raw }}
+        </div>
     </div>
 </div>
 {% endblock %}
