--- a/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
@@ -9,6 +9,7 @@ body {
     text-align: center;
     font: 16px/1.2em Helvetica, Verdana, sans-serif;
     background-color: #000;
+    color: #393939;
 }
 
 a img { border: none; }
@@ -80,21 +81,21 @@ h1 {
     margin: 0; 
     font-size: 30px;
     line-height: 36px;
-    color: #000;
+    color: #393939;
 }
 
 /* ----- Goodies ----- */
 
 #logo { position: absolute; top: 8px; left: 15px; }
 #logo img { width: 90px; }
-#mascot { position: absolute; top: 20px; right: 70px; width:220px;}
+#mascot { position: absolute; top: 20px; right: 45px; width:220px;}
 #knplabs { position: absolute; top: 12px; right: 15px;}
 #knplabs img { width: 45px;}
 
 /* ----- Menu ----- */
 
 #menu, 
-    #menu li { margin: 0; padding: 0; list-style: none; }
+    #menu li { margin: 0; padding: 0; list-style: none;}
 #menu { 
     margin-top: 15px;
     padding-left: 120px;
@@ -116,9 +117,10 @@ h1 {
     #menu a {
         display: block;
         margin: -19px 10px 0 10px;
-        padding: 17px 20px;
+        padding: 17px 19px;
         color: #fff;
         font: 16px/24px Arial, sans-serif;
+        font-weight: bold;
         text-decoration: none;
         -webkit-transition: all .25s ease-in-out;
         -moz-transition: all .25s ease-in-out;
@@ -186,10 +188,16 @@ h1 {
     overflow: hidden;
 }
     #main h2 {
-        margin: 20px 30px;
+        margin: 40px 0px 20px 0px;
         color: #1D95A3;
-        font-size: 18px;
+        font-size: 22px;
         font-weight: bold;
+    }
+
+    #main h3 {
+        margin: 20px 0px;
+        font-size: 18px;
+        font-weight: normal;
     }
 
     #side { float: left; width: 275px; margin: 5px; }
@@ -295,7 +303,7 @@ h1 {
         height: 85px;
         padding: 10px 10px 10px 40px;
         text-decoration: none;
-        color: black;
+        color: #393939;
         background: #ededed; 
         -webkit-transition: all .25s ease-in-out;
         -moz-transition: all .25s ease-in-out;
@@ -352,8 +360,8 @@ h1 {
     padding: 0;
     font-size: 16px;
     font-weight: bold;
-    padding: 10px 10px 0 40px;
-    height: 35px;
+    padding: 15px 10px 0 40px;
+    height: 30px;
     background: #000;
     color: #fff;
     border-radius: 12px 12px 0 0;
@@ -367,7 +375,6 @@ h1 {
     #best-scored-bundles a { color: #393939; }
         #best-scored-bundles .bundles_list .number { background: #393939; }
     #hot-bundles h2 { background: #ed9521 url(../images/hot_bundles_ico.png) no-repeat 12px 16px; }
-    #hot-bundles a { color: #c27700; }
         #hot-bundles .bundles_list .number { background: #c27700; }
 
 /* ----- Repos & Repositories List ----- */
@@ -397,9 +404,15 @@ h1 {
     .developers-list .generals
     { float: left; width: 600px; overflow: hidden; padding-left: 0; }
 
+
+    .repos-list .generals .name
+    {
+        font-size: 20px;
+    }
+
     .repos-list .image,
     .developers-list .image
-    { float: left; width: 100px; }
+    { float: left; width: 50px; }
 
     .bundlerank
     {
@@ -426,15 +439,15 @@ h1 {
         font-size: 16px;
         font-weight: bold;
         color: #000;
-        text-decoration: underline;
+        text-decoration: none;
         display: block;
     }
     .repos-list .owner,
     .developers-list .location {
-        display: block;
         margin-top: 5px;
         color: #e49211;
         text-decoration: none;
+        font-weight: bold;
     }
     .repos-list .description { font-size: 14px; margin-top: 5px; }
     .repos-list .infos,
@@ -450,8 +463,8 @@ h1 {
 
 #homepage {}
     #homepage #present {
-        width: 520px;
-        margin: 10px 5px 10px 5px;
+        width: 590px;
+        margin: 10px 0px 10px 0px;
         padding: 20px;
         font-size: 14px;
         line-height: 24px;
@@ -464,7 +477,7 @@ h1 {
     }
     #homepage #newest-bundles,
     #homepage #best-scored-bundles,
-    #homepage #hot-bundles { float: left; width: 300px; margin: 5px 10px; }
+    #homepage #hot-bundles { float: left; width: 306px; margin: 5px 10px; }
     #homepage #newest-bundles { border-bottom: 4px solid #1d95a3; }
     #homepage #best-scored-bundles { border-bottom: 4px solid #393939; margin-left: 0;}
     #homepage #hot-bundles { border-bottom: 4px solid #ed9521; margin-right: 0; }
@@ -506,7 +519,7 @@ h1 {
             background: #f6f6f6;
         }
             #repo-show #main .infos span { float: right; color: #1d95a3; }
-        #repo-show #main .description { padding: 10px 10px 10px 210px; font-size: 14px; }
+        #repo-show #main .description { padding: 20px 20px 20px 225px; font-size: 14px; }
     #repo-show #side { float: right; width: 275px; margin: 5px; }
     #repo-show #data {
         clear: both; 
@@ -569,3 +582,8 @@ h1 {
 /* ----- Search Result ----- */
 
 #search-result {}
+
+/* ----- API ----- */
+
+#api {}
+    #api #main { padding: 20px; }
