--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
@@ -6,7 +6,17 @@
 
 {% block content_title %}
 <h1>{{ repo.name }}</h1>
-<div class="user">by <a href="{{ path('user_show', {'name': repo.username}) }}">{{ repo.username }}</a></div>
+<ul class="user-list">
+    <li class="user">
+        by <a href="{{ path('user_show', {'name': repo.username}) }}">{{ repo.username }}</a>{% if repo.nbContributors != 0 %},{% endif %}
+    </li>
+
+    {% if repo.nbContributors != 0 %}
+    {% for contributor in repo.contributors %}
+        <li class="contributor"><a href="{{ path('user_show', {'name': contributor}) }}">{{ contributor }}</a>{% if not loop.last %},{% endif %}</li>
+    {% endfor %}
+    {% endif %}
+</ul>
 <div class="actions">
 <a class="button github" href="{{ repo.gitHubUrl }}">View on Github</a>
 </div>
